# owm-wrapper

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt  input.txt
CI/: Dockerfile  Jenkinsfile
app/: CLI11.hpp  CMakeLists.txt  main.cpp
cmake/: CodeCoverage.cmake
core/: CMakeLists.txt  comparison.h  core.h  exceptions.h  filesystem.h  helpers.cpp  helpers.h  parser.cpp  parser.h  reader_writer.h  report_parser.cpp  report_parser.h  reporter_helpers.cpp  reporter_helpers.h  temperature_unit.h  weather_getter.h  weather_reporter.cpp  weather_reporter.h
ext/: CMakeLists.txt
test/: CMakeLists.txt  _current_weather_response.h  _forecast_weather_response.h  api_test.cpp  exceptions.h  testing_helpers.h  weather_reporter_test.cpp
test/api_responses/: invalid_city_response.h  sydney_current_weather_response.h  sydney_forecast_response.h  tallinn_current_weather_response.h  tallinn_forecast_response.h
